Framework CTA label wrap fix

--- a/app/stylus/sections/framework.styl
+++ b/app/stylus/sections/framework.styl
@@ -1,3 +1,7 @@
+header.hero.framework
+  .button
+    width:auto
+
 section.framework
   div
     margin:0 auto
